# my-apps

./: .gitignore  CHANGES.md  CNAME  README.md  app.js  apps.js  apps.json  index.html  style.css  update-stats.sh
.github/workflows/: update-stats.yml
wvw.dev-app/: package.json
wvw.dev-app/src-tauri/: Cargo.toml  tauri.conf.json
wvw.dev-app/src-tauri/src/: lib.rs  main.rs
