[package]
name = "wvw"
version = "0.1.0"
description = "WVW — World Vibe Web desktop app"
authors = ["fka"]
edition = "2021"

[lib]
name = "wvw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
